[gd_scene load_steps=7 format=3 uid="uid://bre1384hmxeg8"]

[ext_resource type="PackedScene" uid="uid://dc6mahoy1datr" path="res://bulletins/fading_bulletin/fading_bulletin_template.tscn" id="1_f7hjr"]
[ext_resource type="Texture2D" uid="uid://c2ppxf5flhm6c" path="res://textures/check_true.png" id="2_0lr4q"]
[ext_resource type="Theme" uid="uid://6aavhiaw1d6l" path="res://resources/default_font_ui.tres" id="2_x3qfp"]
[ext_resource type="Texture2D" uid="uid://byhgicxy6b8u4" path="res://textures/check_false.png" id="3_5xolr"]
[ext_resource type="Script" path="res://bulletins/settings_menu/settings_menu.gd" id="3_rpy1l"]
[ext_resource type="Script" path="res://ui/custom_nodes/ui_button.gd" id="6_ltpka"]

[node name="SettingsMenu" instance=ExtResource("1_f7hjr")]
theme = ExtResource("2_x3qfp")
script = ExtResource("3_rpy1l")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 150
alignment = 1

[node name="SettingsContainer" type="HBoxContainer" parent="VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="SettingsLabelContainer" type="VBoxContainer" parent="VBoxContainer/SettingsContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MusicLabel" type="Label" parent="VBoxContainer/SettingsContainer/SettingsLabelContainer" index="0"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Music Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFXLabel" type="Label" parent="VBoxContainer/SettingsContainer/SettingsLabelContainer" index="1"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SFX Volume"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ResolutionLabel" type="Label" parent="VBoxContainer/SettingsContainer/SettingsLabelContainer" index="2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Resolution Scale"
horizontal_alignment = 2
vertical_alignment = 1

[node name="SSAALabel" type="Label" parent="VBoxContainer/SettingsContainer/SettingsLabelContainer" index="3"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Antialiasing "
horizontal_alignment = 2
vertical_alignment = 1

[node name="FullScreenLabel" type="Label" parent="VBoxContainer/SettingsContainer/SettingsLabelContainer" index="4"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "FullScreen"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WidgetContainer" type="VBoxContainer" parent="VBoxContainer/SettingsContainer" index="1"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="MusicVolumeContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer/WidgetContainer" index="0"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/WidgetContainer/MusicVolumeContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 24)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="MusicVolumeLabel" type="Label" parent="VBoxContainer/SettingsContainer/WidgetContainer/MusicVolumeContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "50%
"

[node name="SFXVolumeContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer/WidgetContainer" index="1"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/WidgetContainer/SFXVolumeContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 24)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[node name="SFXVolumeLabel" type="Label" parent="VBoxContainer/SettingsContainer/WidgetContainer/SFXVolumeContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "50%
"

[node name="ResolutionScaleContainer" type="HBoxContainer" parent="VBoxContainer/SettingsContainer/WidgetContainer" index="2"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="ResolutionScaleSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/WidgetContainer/ResolutionScaleContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 24)
layout_mode = 2
size_flags_vertical = 4
min_value = 0.5
max_value = 2.0
step = 0.01
value = 0.5

[node name="ResolutionScaleLabel" type="Label" parent="VBoxContainer/SettingsContainer/WidgetContainer/ResolutionScaleContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "50%
"

[node name="SSAACheckButton" type="CheckButton" parent="VBoxContainer/SettingsContainer/WidgetContainer" index="3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_icons/checked = ExtResource("2_0lr4q")
theme_override_icons/unchecked = ExtResource("3_5xolr")

[node name="FullScreenCheckButton" type="CheckButton" parent="VBoxContainer/SettingsContainer/WidgetContainer" index="4"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_icons/checked = ExtResource("2_0lr4q")
theme_override_icons/unchecked = ExtResource("3_5xolr")

[node name="CloseButton" type="Button" parent="VBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 4
text = "Apply And Close"
script = ExtResource("6_ltpka")

[connection signal="pressed" from="VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
